SERVER-55359 pre/post image ops after startFetchingDonorOpTime should be filtered out of oplog buffer

(cherry picked from commit 9457ca34a5e157698602e620042c6c8037023375)